--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1059,3 +1059,93 @@ footer{
 .col-sm-4 a{
   text-decoration: none;
 }
+
+
+
+/* pop up */
+
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+}
+
+.click, .popup_box{
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+}
+.click{
+  background: #2981bc;
+  color: white;
+  font-size: 22px;
+  font-family: arial;
+  font-weight: bold;
+  padding: 10px 15px;
+  text-align: center;
+  border: 1px solid #0059b3;
+}
+.popup_box{
+  width: 400px;
+  background: white;
+  text-align: center;
+  align-items: center;
+  padding: 40px;
+  border: 3px solid #6415ff;
+  box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
+  z-index: 9999;
+  display: none;
+}
+.popup_box i{
+  font-size: 25px;
+  color: #eb9447;
+  border: 5px solid #eb9447;
+  padding: 20px 40px;
+  border-radius: 50%;
+  margin: -10px 0 20px 0;
+}
+.popup_box h3{
+  font-size: 30px;
+  color: black;
+  margin-bottom: 5px;
+}
+.popup_box .popup_box label{
+  font-size: 23px;
+  color: #404040;
+}
+.popup_box .popup_box{
+  margin: 40px 0 0 0;
+}
+
+.btns{
+  text-align: right;
+}
+.popup_box .btns .btn1, .btns .btn2{
+  background: #999999;
+  color: white;
+  font-size: 10px;
+  border-radius: 5px;
+  border: 1px solid #808080;
+  margin-top: 51%;
+  padding: 10px 13px;
+}
+.popup_box .btns .btn2{
+  margin-left: 20px;
+  background: #ff3333;
+  border: 1px solid #cc0000;
+}
+.popup_box .btns .btn1:hover{
+  transition: .5s;
+  background: #8c8c8c;
+}
+.popup_box .btns .btn2:hover{
+  transition: .5s;
+  background: #e60000; 
+}
+
+.exclam{
+  text-align: center;
+}
